# ghidra-re-skill

./: .gitignore  README.md  RE_ROADMAP.md  SKILL.md  install.sh  pyproject.toml
.github/workflows/: cross-platform.yml
agents/: openai.yaml
ghidra_re_skill/: __init__.py  __main__.py  cli.py
ghidra_re_skill.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ghidra_re_skill/core/: __init__.py  config.py  ghidra_locator.py  platform_helpers.py  subprocess_utils.py  utils.py
ghidra_re_skill/modules/: __init__.py  bridge.py  clusters.py  diffing.py  exporter.py  frameworks.py  frida_scripts.py  harness.py  hierarchy.py  importer.py  lldb_enrich.py  mission.py  notes.py  plugins.py  publisher.py  xpc_graph.py  xpc_harness.py  xpc_surface.py
powershell/: GhidraRe.Common.ps1  GhidraRe.psd1  GhidraRe.psm1
references/: builtins.md  output-files.md  use-case-driven-notes.md
scripts/: bootstrap  build_mac_desktop_share_package  build_share_package  build_windows_desktop_share_package  common.sh  doctor  ghidra_apply_finding  ghidra_bridge_arm  ghidra_bridge_build  ghidra_bridge_call  ghidra_bridge_clear_listing  ghidra_bridge_close  ghidra_bridge_create_data  ghidra_bridge_create_function  ghidra_bridge_current_context  ghidra_bridge_data_get  ghidra_bridge_delete_data  ghidra_bridge_delete_function  ghidra_bridge_disarm  ghidra_bridge_disassemble  ghidra_bridge_install  ghidra_bridge_memory_range  ghidra_bridge_open  ghidra_bridge_patch_bytes  ghidra_bridge_patch_instruction  ghidra_bridge_save  ghidra_bridge_sessions  ghidra_bridge_snapshot  ghidra_bridge_status  ghidra_bridge_strings_search  ghidra_bridge_swift_search  ghidra_bridge_swift_type  ghidra_bridge_symbols_get  ghidra_bridge_symbols_xrefs  ghidra_build_authstub_map  ghidra_build_isa_map  ghidra_describe_cfstring  ghidra_describe_objc_class  ghidra_describe_objc_protocol  ghidra_describe_selector  (+44 more)
scripts/ghidra_scripts/: BugHuntSupport.java  DecompileFunction.java  ExportAppleBundle.java  ExportMachOStructure.java  ExportObjCTypeLayout.java  (+3 more)
templates/: config.env.example
(+5 files in other folders)
